@@ -1,4 +1,8 @@
-﻿drkns 16.12.2014 09:27:11 +0200 - build 4219
+﻿zg 18.12.2014 17:04:23 +0200 - build 4220
+
+1. проблемы с файлами, у которых первый символ в имени ゝ.
+
+drkns 16.12.2014 09:27:11 +0200 - build 4219
 
 1. 0002887: Far Manager v3.0 build 4218 x64 (2014-12-16) падает в панелях при нажатии Ctrl-F для получения полного пути
 
